Fix spacing for lists and related articles  (#11)
* Fix spacing around related topics and lists

* Removed redundant style

--- a/styles/_steps.scss
+++ b/styles/_steps.scss
@@ -34,11 +34,6 @@
       .step-content {
         flex-basis: 300px;
         flex-grow: 1;
-
-        ol,
-        ul {
-          margin: 0;
-        }
       }
     }
   }
